@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.104 2023/12/12 16:31:45 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.105 2024/02/08 02:26:01 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -28,7 +28,7 @@ PROGS = findglare glarendx rpiece rad ranimate ranimove vwright getinfo \
 
 LIBFILES = rambpos.cal ambpos.cal tregsamp.dat reinhartb.cal \
 klems_full.cal klems_half.cal klems_quarter.cal disk2square.cal \
-hsv_rgb.cal minimalBSDFt.xml WINDOW6BSDFt.xml
+cieskyscan.cal hsv_rgb.cal minimalBSDFt.xml WINDOW6BSDFt.xml
 
 all:	$(PROGS)
 
